Fix z-index order for fullscreen.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,8 +88,6 @@ header {
   cursor: pointer;
 }
 
-
-
 .profile {
   padding: 10px;
 }
@@ -157,8 +155,6 @@ header {
     transition:opacity 1s linear;
 
     .face {
-
-
       .clickCatcher {
         position: fixed;
         top: 0;
@@ -245,7 +241,7 @@ header {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     opacity:0;
     transition:opacity 1s linear;
-    z-index: 1100;
+    z-index: 1201;
 
     .close {
       position: absolute;
